# Vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  collate.sqlite  vcpkg-configuration.json  vcpkg.json
demo/: CMakeLists.txt
demo/fmt/: demo.cpp
demo/json/: demo.cpp
demo/spdlog/: demo.cpp
demo/sqlite-orm/: demo.cpp
example/: CMakeLists.txt
example/fmt/: main.cpp
